admin data fetch

--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -114,7 +114,7 @@
         </svg>
         <div class="mx-2 text-center font-normal">
           <span>Delivery</span>
-          <hr class="m-px" />
+          <hr class="my-1" />
           {{ profile.Reviews }}
         </div>
         <svg
