--- a/src/app/user/order/order.component.html
+++ b/src/app/user/order/order.component.html
@@ -1,29 +1,24 @@
 <div class="flex h-screen overflow-hidden">
   <div class="border-taupe-gray h-full border-r-2 h-full">
     <ul class="text-xl font-regular">
-      <li class="ml-14 cursor-pointer w-52 py-4 text-taupe-gray">All ({{ items.length }})</li>
-      <li class="ml-14 cursor-pointer w-52 py-4 text-taupe-gray">
-        Pizza ({{ items.length }})
-      </li>
-      <li class="ml-14 cursor-pointer w-52 py-4 text-taupe-gray">
-        Burger ({{ items.length }})
-      </li>
-      <li class="ml-14 cursor-pointer w-52 py-4 text-taupe-gray">
-        Cake ({{ items.length }})
-      </li>
-      <li class="ml-14 cursor-pointer w-52 py-4 text-taupe-gray">
-        Cold Drinks ({{ items.length }})
+      <li
+        *ngFor="let i of category"
+        class="ml-14 cursor-pointer w-52 py-4 text-taupe-gray"
+      >
+        {{ i }}
       </li>
     </ul>
   </div>
-  <div
-    class="ml-10 element h-screen overflow-y-scroll w-full"
-  >
-    <div *ngFor="let item of items" class="flex my-10">
-      <img class="w-28 h-28 rounded-lg" src="{{ item.image }}" alt="" />
+  <div class="ml-10 element h-screen overflow-y-scroll w-full">
+    <div *ngFor="let i of item" class="flex my-10">
+      <img
+        class="w-28 h-28 rounded-lg"
+        src="http://localhost:5000/admin/file/get/{{ i.img }}"
+        alt=""
+      />
       <div class="ml-2 w-80 flex justify-between">
         <div>
-          <span class="text-3xl">{{ item.food }}</span>
+          <span class="text-3xl">{{ i.name }}</span>
           <svg
             class=""
             width="15"
@@ -41,7 +36,7 @@
         <div class="flex justify-between flex-col text-right">
           <button class="text-taupe-gray">Add to Cart</button>
           <span class="text-flicker-pink text-xl font-medium"
-            >${{ item.price }}</span
+            >${{ i.price }}</span
           >
         </div>
       </div>
