--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -122,6 +122,7 @@
           height="18"
           viewBox="0 0 10 10"
           fill="none"
+          (click)="reviewRedirect()"
           xmlns="http://www.w3.org/2000/svg"
         >
           <path
