--- a/src/app/user/order/order.component.html
+++ b/src/app/user/order/order.component.html
@@ -1,16 +1,19 @@
 <div class="flex h-screen overflow-hidden">
   <div class="border-taupe-gray h-full border-r-2 h-full">
     <ul class="text-xl font-regular">
+      <li class="ml-14 cursor-pointer w-52 py-4 text-taupe-gray">
+        <button (click)="filter('All')">All</button>
+      </li>
       <li
         *ngFor="let i of category"
         class="ml-14 cursor-pointer w-52 py-4 text-taupe-gray"
       >
-        {{ i }}
+        <button (click)="filter(i)">{{ i }}</button>
       </li>
     </ul>
   </div>
   <div class="ml-10 element h-screen overflow-y-scroll w-full">
-    <div *ngFor="let i of item" class="flex my-10">
+    <div *ngFor="let i of item; let k = index" class="flex my-10">
       <img
         class="w-28 h-28 rounded-lg"
         src="http://localhost:5000/admin/file/get/{{ i.img }}"
@@ -20,6 +23,7 @@
         <div>
           <span class="text-3xl">{{ i.name }}</span>
           <svg
+            data-ng-repeat="i in i.rating"
             class=""
             width="15"
             height="15"
@@ -34,7 +38,9 @@
           </svg>
         </div>
         <div class="flex justify-between flex-col text-right">
-          <button class="text-taupe-gray">Add to Cart</button>
+          <button (click)="addToCart(k)" class="text-taupe-gray">
+            Add to Cart
+          </button>
           <span class="text-flicker-pink text-xl font-medium"
             >${{ i.price }}</span
           >
