--- a/src/app/dialog/cart/cart.component.html
+++ b/src/app/dialog/cart/cart.component.html
@@ -31,15 +31,18 @@
     <mat-dialog-content class="cart w-4/6 mr-10 mat-typography">
       <!-- card -->
       <div
+        *ngFor="let i of item; let k = index"
         class="rounded-lg flex bg-flicker-pink my-5 ml-20 drop-shadow-2xl items-center justify-between mr-10"
       >
-        <div class="flex justify-between w-full border-2 bg-white cart-item rounded-lg">
+        <div
+          class="flex justify-between w-full border-2 bg-white cart-item rounded-lg"
+        >
           <div class="flex items-end">
             <img
               height="150px"
               width="150px"
               class="m-1"
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSx__KaMkEMSGoUJ92p2M-m-IF8D0P1uoNBTQ&usqp=CAU"
+              src="http://localhost:5000/admin/file/get/{{ i.img }}"
               alt=""
             />
             <div class="flex mx-4 items-center">
@@ -53,7 +56,7 @@
               >
                 <path d="M0 0H10V1H0V0Z" fill="black" />
               </svg>
-              <span class="text-lg mx-4">1</span>
+              <span class="text-lg mx-4">{{ i.quantity }}</span>
               <svg
                 width="15"
                 height="15"
@@ -70,8 +73,8 @@
             </div>
           </div>
           <div class="flex flex-col justify-between items-end mr-2">
-            <span class="text-2xl m-1">Burger</span>
-            <span class="text-flicker-pink text-lg m-1">$ 10</span>
+            <span class="text-2xl m-1">{{ i.name }}</span>
+            <span class="text-flicker-pink text-lg m-1">$ {{ i.price }}</span>
           </div>
         </div>
         <svg
@@ -81,6 +84,7 @@
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
           class="mx-3"
+          (click)="delete(i)"
         >
           <path
             d="M19.5 5C19.5 5.24493 19.41 5.48134 19.2473 5.66437C19.0845 5.84741 18.8603 5.96434 18.617 5.993L18.5 6H17.655L16.424 18.52C16.357 19.1994 16.0397 19.8295 15.5338 20.2879C15.0279 20.7462 14.3697 21.0001 13.687 21H6.313C5.63035 21.0001 4.97207 20.7462 4.4662 20.2879C3.96033 19.8295 3.64302 19.1994 3.576 18.52L2.345 6H1.5C1.23478 6 0.98043 5.89464 0.792893 5.70711C0.605357 5.51957 0.5 5.26522 0.5 5C0.5 4.73478 0.605357 4.48043 0.792893 4.29289C0.98043 4.10536 1.23478 4 1.5 4H6.5C6.5 3.54037 6.59053 3.08525 6.76642 2.66061C6.94231 2.23597 7.20012 1.85013 7.52513 1.52513C7.85013 1.20012 8.23597 0.942313 8.66061 0.766422C9.08525 0.59053 9.54037 0.5 10 0.5C10.4596 0.5 10.9148 0.59053 11.3394 0.766422C11.764 0.942313 12.1499 1.20012 12.4749 1.52513C12.7999 1.85013 13.0577 2.23597 13.2336 2.66061C13.4095 3.08525 13.5 3.54037 13.5 4H18.5C18.7652 4 19.0196 4.10536 19.2071 4.29289C19.3946 4.48043 19.5 4.73478 19.5 5ZM12.25 8.25C12.0688 8.25001 11.8937 8.31564 11.7571 8.43477C11.6205 8.55389 11.5316 8.71845 11.507 8.898L11.5 9V16L11.507 16.102C11.5317 16.2815 11.6206 16.446 11.7571 16.5651C11.8937 16.6842 12.0688 16.7498 12.25 16.7498C12.4312 16.7498 12.6063 16.6842 12.7429 16.5651C12.8794 16.446 12.9683 16.2815 12.993 16.102L13 16V9L12.993 8.898C12.9684 8.71845 12.8795 8.55389 12.7429 8.43477C12.6063 8.31564 12.4312 8.25001 12.25 8.25V8.25ZM7.75 8.25C7.56876 8.25001 7.39366 8.31564 7.25707 8.43477C7.12048 8.55389 7.03165 8.71845 7.007 8.898L7 9V16L7.007 16.102C7.0317 16.2815 7.12055 16.446 7.25714 16.5651C7.39372 16.6842 7.5688 16.7498 7.75 16.7498C7.9312 16.7498 8.10628 16.6842 8.24286 16.5651C8.37945 16.446 8.4683 16.2815 8.493 16.102L8.5 16V9L8.493 8.898C8.46835 8.71845 8.37952 8.55389 8.24293 8.43477C8.10634 8.31564 7.93124 8.25001 7.75 8.25V8.25ZM10 2.5C9.60218 2.5 9.22064 2.65804 8.93934 2.93934C8.65804 3.22064 8.5 3.60218 8.5 4H11.5C11.5 3.60218 11.342 3.22064 11.0607 2.93934C10.7794 2.65804 10.3978 2.5 10 2.5Z"
