--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="md:container md:mx-auto flex flex-col justify-center items-center">
+<div *ngIf="profile" class="md:container md:mx-auto flex flex-col justify-center items-center">
   <div class="w-4/5 bg-black h-1/2 flex items-center justify-between p-20">
     <svg
       class="cursor-pointer"
