--- a/src/app/dialog/cart/cart.component.html
+++ b/src/app/dialog/cart/cart.component.html
@@ -1,28 +1,17 @@
 <div style="height: 80vh; width: 60vw">
-  <div
-    class="flex justify-between text-3xl items-center font-medium text-flicker-pink m-5"
-  >
+  <div class="flex justify-between text-3xl items-center font-medium text-flicker-pink m-5">
     MY CART
     <button mat-button mat-dialog-close>
-      <svg
-        width="40"
-        height="37"
-        viewBox="0 0 40 37"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
+      <svg width="40" height="37" viewBox="0 0 40 37" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path
           d="M0.686069 8.22314C1.03726 7.60777 1.54016 7.09495 2.14573 6.73471C2.75129 6.37447 3.43884 6.1791 4.14131 6.16766H30.1572L31.3361 1.52226C31.4552 1.07384 31.7209 0.6794 32.09 0.4032C32.4591 0.127001 32.9097 -0.01469 33.3686 0.0012055H37.4336C37.9726 0.0012055 38.4896 0.217765 38.8708 0.603243C39.2519 0.988721 39.4661 1.51154 39.4661 2.05669C39.4661 2.60184 39.2519 3.12466 38.8708 3.51014C38.4896 3.89561 37.9726 4.11217 37.4336 4.11217H34.9133L29.3036 25.2014C29.1845 25.6499 28.9188 26.0443 28.5497 26.3205C28.1806 26.5967 27.73 26.7384 27.2711 26.7225H8.97865C8.60331 26.7213 8.23562 26.6151 7.91633 26.4156C7.59704 26.216 7.33863 25.931 7.16973 25.592L0.503143 12.108C0.214195 11.4955 0.0796776 10.8202 0.111595 10.1423C0.143513 9.46444 0.340878 8.80511 0.686069 8.22314Z"
-          fill="#F72585"
-        />
+          fill="#F72585" />
         <path
           d="M28.2877 37C26.6039 37 25.2389 35.6196 25.2389 33.9167C25.2389 32.2139 26.6039 30.8335 28.2877 30.8335C29.9715 30.8335 31.3365 32.2139 31.3365 33.9167C31.3365 35.6196 29.9715 37 28.2877 37Z"
-          fill="#F72585"
-        />
+          fill="#F72585" />
         <path
           d="M7.96268 37C6.27891 37 4.91394 35.6195 4.91394 33.9167C4.91394 32.2139 6.27891 30.8335 7.96268 30.8335C9.64645 30.8335 11.0114 32.2139 11.0114 33.9167C11.0114 35.6195 9.64645 37 7.96268 37Z"
-          fill="#F72585"
-        />
+          fill="#F72585" />
       </svg>
     </button>
   </div>
@@ -30,45 +19,21 @@
     <!-- cart item -->
     <mat-dialog-content class="cart w-4/6 mr-10 mat-typography">
       <!-- card -->
-      <div
-        *ngFor="let i of item; let k = index"
-        class="rounded-lg flex bg-flicker-pink my-5 ml-20 drop-shadow-2xl items-center justify-between mr-10"
-      >
-        <div
-          class="flex justify-between w-full border-2 bg-white cart-item rounded-lg"
-        >
+      <div *ngFor="let i of item; let k = index"
+        class="rounded-lg flex bg-flicker-pink my-5 ml-20 drop-shadow-2xl items-center justify-between mr-10">
+        <div class="flex justify-between w-full border-2 bg-white cart-item rounded-lg">
           <div class="flex items-end">
-            <img
-              height="150px"
-              width="150px"
-              class="m-1"
-              src="http://localhost:5000/admin/file/get/{{ i.img }}"
-              alt=""
-            />
+            <img height="150px" width="150px" *ngIf="i.imgBase64" class="m-1"
+              [src]="'data:image/jpeg;base64,' + i.imgBase64" alt="Product Image" />
             <div class="flex mx-4 items-center">
-              <svg
-                width="15"
-                height="5"
-                viewBox="0 0 10 1"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-                class="cursor-pointer"
-              >
+              <svg width="15" height="5" viewBox="0 0 10 1" fill="none" xmlns="http://www.w3.org/2000/svg"
+                class="cursor-pointer">
                 <path d="M0 0H10V1H0V0Z" fill="black" />
               </svg>
               <span class="text-lg mx-4">{{ i.quantity }}</span>
-              <svg
-                width="15"
-                height="15"
-                viewBox="0 0 10 10"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-                class="cursor-pointer"
-              >
-                <path
-                  d="M5.625 4.375V0H4.375V4.375H0V5.625H4.375V10H5.625V5.625H10V4.375H5.625Z"
-                  fill="black"
-                />
+              <svg width="15" height="15" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg"
+                class="cursor-pointer">
+                <path d="M5.625 4.375V0H4.375V4.375H0V5.625H4.375V10H5.625V5.625H10V4.375H5.625Z" fill="black" />
               </svg>
             </div>
           </div>
@@ -77,19 +42,11 @@
             <span class="text-flicker-pink text-lg m-1">$ {{ i.price }}</span>
           </div>
         </div>
-        <svg
-          width="22"
-          height="25"
-          viewBox="0 0 20 21"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-          class="mx-3"
-          (click)="delete(i)"
-        >
+        <svg width="22" height="25" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg" class="mx-3"
+          (click)="delete(i)">
           <path
             d="M19.5 5C19.5 5.24493 19.41 5.48134 19.2473 5.66437C19.0845 5.84741 18.8603 5.96434 18.617 5.993L18.5 6H17.655L16.424 18.52C16.357 19.1994 16.0397 19.8295 15.5338 20.2879C15.0279 20.7462 14.3697 21.0001 13.687 21H6.313C5.63035 21.0001 4.97207 20.7462 4.4662 20.2879C3.96033 19.8295 3.64302 19.1994 3.576 18.52L2.345 6H1.5C1.23478 6 0.98043 5.89464 0.792893 5.70711C0.605357 5.51957 0.5 5.26522 0.5 5C0.5 4.73478 0.605357 4.48043 0.792893 4.29289C0.98043 4.10536 1.23478 4 1.5 4H6.5C6.5 3.54037 6.59053 3.08525 6.76642 2.66061C6.94231 2.23597 7.20012 1.85013 7.52513 1.52513C7.85013 1.20012 8.23597 0.942313 8.66061 0.766422C9.08525 0.59053 9.54037 0.5 10 0.5C10.4596 0.5 10.9148 0.59053 11.3394 0.766422C11.764 0.942313 12.1499 1.20012 12.4749 1.52513C12.7999 1.85013 13.0577 2.23597 13.2336 2.66061C13.4095 3.08525 13.5 3.54037 13.5 4H18.5C18.7652 4 19.0196 4.10536 19.2071 4.29289C19.3946 4.48043 19.5 4.73478 19.5 5ZM12.25 8.25C12.0688 8.25001 11.8937 8.31564 11.7571 8.43477C11.6205 8.55389 11.5316 8.71845 11.507 8.898L11.5 9V16L11.507 16.102C11.5317 16.2815 11.6206 16.446 11.7571 16.5651C11.8937 16.6842 12.0688 16.7498 12.25 16.7498C12.4312 16.7498 12.6063 16.6842 12.7429 16.5651C12.8794 16.446 12.9683 16.2815 12.993 16.102L13 16V9L12.993 8.898C12.9684 8.71845 12.8795 8.55389 12.7429 8.43477C12.6063 8.31564 12.4312 8.25001 12.25 8.25V8.25ZM7.75 8.25C7.56876 8.25001 7.39366 8.31564 7.25707 8.43477C7.12048 8.55389 7.03165 8.71845 7.007 8.898L7 9V16L7.007 16.102C7.0317 16.2815 7.12055 16.446 7.25714 16.5651C7.39372 16.6842 7.5688 16.7498 7.75 16.7498C7.9312 16.7498 8.10628 16.6842 8.24286 16.5651C8.37945 16.446 8.4683 16.2815 8.493 16.102L8.5 16V9L8.493 8.898C8.46835 8.71845 8.37952 8.55389 8.24293 8.43477C8.10634 8.31564 7.93124 8.25001 7.75 8.25V8.25ZM10 2.5C9.60218 2.5 9.22064 2.65804 8.93934 2.93934C8.65804 3.22064 8.5 3.60218 8.5 4H11.5C11.5 3.60218 11.342 3.22064 11.0607 2.93934C10.7794 2.65804 10.3978 2.5 10 2.5Z"
-            fill="black"
-          />
+            fill="black" />
         </svg>
       </div>
     </mat-dialog-content>
@@ -100,16 +57,12 @@
           <p>Total amount</p>
           <p>Discount</p>
         </div>
-        <div
-          class="flex font-medium items-start flex-col text-xl text-flicker-pink"
-        >
+        <div class="flex font-medium items-start flex-col text-xl text-flicker-pink">
           <p>$ 1000</p>
           <p>$ 234</p>
         </div>
       </div>
-      <button
-        class="border-dashed rounded-md border-2 opacity-80 bg-taupe-gray text-xl px-8 py-1 m-auto my-6"
-      >
+      <button class="border-dashed rounded-md border-2 opacity-80 bg-taupe-gray text-xl px-8 py-1 m-auto my-6">
         Apply Coupon
       </button>
       <hr class="opacity-50" />
