--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,19 +1,10 @@
 <div *ngIf="profile" class="md:container md:mx-auto flex flex-col justify-center items-center">
   <div class="w-4/5 bg-black h-1/2 flex items-center justify-between p-20">
-    <svg
-      class="cursor-pointer"
-      width="58"
-      height="60"
-      viewBox="0 0 58 60"
-      fill="none"
-      xmlns="http://www.w3.org/2000/svg"
-    >
-      <path
-        fill-rule="evenodd"
-        clip-rule="evenodd"
+    <svg class="cursor-pointer" width="58" height="60" viewBox="0 0 58 60" fill="none"
+      xmlns="http://www.w3.org/2000/svg">
+      <path fill-rule="evenodd" clip-rule="evenodd"
         d="M50.0258 56.25C50.9546 56.25 51.8454 55.8549 52.5022 55.1516C53.1589 54.4484 53.5279 53.4946 53.5279 52.5L53.5279 7.5C53.5279 6.50544 53.1589 5.55161 52.5022 4.84835C51.8454 4.14509 50.9546 3.75 50.0258 3.75L8.00062 3.75C7.0718 3.75 6.18103 4.14509 5.52426 4.84835C4.86749 5.55161 4.49852 6.50544 4.49852 7.5L4.49852 52.5C4.49852 53.4946 4.86749 54.4484 5.52426 55.1516C6.18103 55.8549 7.0718 56.25 8.00062 56.25L50.0258 56.25ZM50.0258 -3.27835e-07C51.8834 -2.40888e-07 53.665 0.790176 54.9785 2.1967C56.2921 3.60322 57.03 5.51088 57.03 7.5L57.03 52.5C57.03 54.4891 56.2921 56.3968 54.9785 57.8033C53.665 59.2098 51.8834 60 50.0258 60L8.00062 60C6.14299 60 4.36144 59.2098 3.0479 57.8033C1.73436 56.3968 0.99642 54.4891 0.99642 52.5L0.996422 7.5C0.996422 5.51087 1.73436 3.60322 3.0479 2.1967C4.36145 0.790174 6.14299 -2.38179e-06 8.00062 -2.29485e-06L50.0258 -3.27835e-07ZM41.2706 31.875C41.735 31.875 42.1803 31.6775 42.5087 31.3258C42.8371 30.9742 43.0216 30.4973 43.0216 30C43.0216 29.5027 42.8371 29.0258 42.5087 28.6742C42.1803 28.3225 41.735 28.125 41.2706 28.125L20.9829 28.125L28.5019 20.0775C28.8307 19.7254 29.0154 19.2479 29.0154 18.75C29.0154 18.2521 28.8307 17.7746 28.5019 17.4225C28.1731 17.0704 27.7272 16.8726 27.2622 16.8726C26.7972 16.8726 26.3512 17.0704 26.0224 17.4225L15.5161 28.6725C15.353 28.8467 15.2237 29.0536 15.1354 29.2814C15.0471 29.5092 15.0017 29.7534 15.0017 30C15.0017 30.2466 15.0471 30.4908 15.1354 30.7186C15.2237 30.9464 15.353 31.1533 15.5161 31.3275L26.0224 42.5775C26.3512 42.9296 26.7972 43.1274 27.2622 43.1274C27.7272 43.1274 28.1731 42.9296 28.5019 42.5775C28.8307 42.2254 29.0154 41.7479 29.0154 41.25C29.0154 40.7521 28.8307 40.2746 28.5019 39.9225L20.9829 31.875L41.2706 31.875Z"
-        fill="white"
-      />
+        fill="white" />
     </svg>
     <div class="flex w-full h-full justify-center items-center">
       <img class="w-96 h-96" src="{{ image }}" alt="" />
@@ -27,20 +18,11 @@
         <img class="w-28 h-28" src="{{ image }}" alt="" />
       </div>
     </div>
-    <svg
-      class="cursor-pointer"
-      width="57"
-      height="60"
-      viewBox="0 0 57 60"
-      fill="none"
-      xmlns="http://www.w3.org/2000/svg"
-    >
-      <path
-        fill-rule="evenodd"
-        clip-rule="evenodd"
+    <svg class="cursor-pointer" width="57" height="60" viewBox="0 0 57 60" fill="none"
+      xmlns="http://www.w3.org/2000/svg">
+      <path fill-rule="evenodd" clip-rule="evenodd"
         d="M7.0142 3.75C6.08539 3.75 5.19462 4.14509 4.53785 4.84835C3.88108 5.55162 3.51211 6.50544 3.51211 7.5L3.51211 52.5C3.51211 53.4946 3.88108 54.4484 4.53785 55.1517C5.19462 55.8549 6.08539 56.25 7.01421 56.25L49.0394 56.25C49.9682 56.25 50.859 55.8549 51.5157 55.1516C52.1725 54.4484 52.5415 53.4946 52.5415 52.5L52.5415 7.5C52.5415 6.50544 52.1725 5.55161 51.5157 4.84835C50.859 4.14509 49.9682 3.75 49.0394 3.75L7.0142 3.75ZM7.01421 60C5.15658 60 3.37503 59.2098 2.06149 57.8033C0.74795 56.3968 0.0100095 54.4891 0.0100095 52.5L0.0100076 7.5C0.0100075 5.51088 0.747948 3.60323 2.06149 2.1967C3.37503 0.790184 5.15657 3.57381e-06 7.0142 3.48686e-06L49.0394 1.51985e-06C50.897 1.4329e-06 52.6785 0.790182 53.9921 2.1967C55.3056 3.60322 56.0436 5.51088 56.0436 7.5L56.0436 52.5C56.0436 54.4891 55.3056 56.3968 53.9921 57.8033C52.6786 59.2098 50.897 60 49.0394 60L7.01421 60ZM15.7694 28.125C15.305 28.125 14.8597 28.3225 14.5313 28.6742C14.2029 29.0258 14.0184 29.5027 14.0184 30C14.0184 30.4973 14.2029 30.9742 14.5313 31.3258C14.8597 31.6775 15.305 31.875 15.7694 31.875L36.0571 31.875L28.5381 39.9225C28.2093 40.2746 28.0246 40.7521 28.0246 41.25C28.0246 41.7479 28.2093 42.2254 28.5381 42.5775C28.8669 42.9296 29.3128 43.1274 29.7778 43.1274C30.2428 43.1274 30.6888 42.9296 31.0176 42.5775L41.5239 31.3275C41.6869 31.1533 41.8163 30.9464 41.9046 30.7186C41.9929 30.4908 42.0383 30.2466 42.0383 30C42.0383 29.7534 41.9929 29.5092 41.9046 29.2814C41.8163 29.0536 41.6869 28.8467 41.5239 28.6725L31.0176 17.4225C30.6888 17.0704 30.2428 16.8726 29.7778 16.8726C29.3128 16.8726 28.8669 17.0704 28.5381 17.4225C28.2093 17.7746 28.0246 18.2521 28.0246 18.75C28.0246 19.2479 28.2093 19.7254 28.5381 20.0775L36.0571 28.125L15.7694 28.125Z"
-        fill="white"
-      />
+        fill="white" />
     </svg>
   </div>
   <div class="w-4/5 flex justify-between mt-5">
@@ -48,18 +30,11 @@
       <div>
         <span class="text-5xl">{{ profile.restaurant }}</span>
         <button (click)="openedit()">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            x="0px"
-            y="0px"
-            width="25"
-            height="25"
-            viewBox="0 0 128 128"
-            style="fill: #000000"
-          >
+          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25" viewBox="0 0 128 128"
+            style="fill: #000000">
             <path
-              d="M 79.335938 15.667969 C 78.064453 15.622266 76.775 15.762109 75.5 16.099609 C 72.1 16.999609 69.299609 19.199219 67.599609 22.199219 L 64 28.699219 C 63.2 30.099219 63.699609 32.000781 65.099609 32.800781 L 82.400391 42.800781 C 82.900391 43.100781 83.400391 43.199219 83.900391 43.199219 C 84.200391 43.199219 84.399219 43.199609 84.699219 43.099609 C 85.499219 42.899609 86.1 42.399219 86.5 41.699219 L 90.199219 35.199219 C 91.899219 32.199219 92.4 28.700781 91.5 25.300781 C 90.6 21.900781 88.400391 19.100391 85.400391 17.400391 C 83.525391 16.337891 81.455078 15.744141 79.335938 15.667969 z M 60.097656 38.126953 C 59.128906 38.201172 58.199219 38.724609 57.699219 39.599609 L 27.5 92 C 24.1 97.8 22.200781 104.30039 21.800781 110.90039 L 21 123.80078 C 20.9 124.90078 21.5 125.99961 22.5 126.59961 C 23 126.89961 23.5 127 24 127 C 24.6 127 25.199219 126.8 25.699219 126.5 L 36.5 119.40039 C 42 115.70039 46.7 110.8 50 105 L 80.300781 52.599609 C 81.100781 51.199609 80.599219 49.3 79.199219 48.5 C 77.799219 47.7 75.899609 48.199609 75.099609 49.599609 L 44.800781 102 C 41.900781 106.9 37.899609 111.20039 33.099609 114.40039 L 27.300781 118.19922 L 27.699219 111.30078 C 27.999219 105.60078 29.699609 100 32.599609 95 L 62.900391 42.599609 C 63.700391 41.199609 63.200781 39.3 61.800781 38.5 C 61.275781 38.2 60.678906 38.082422 60.097656 38.126953 z M 49 121 C 47.3 121 46 122.3 46 124 C 46 125.7 47.3 127 49 127 L 89 127 C 90.7 127 92 125.7 92 124 C 92 122.3 90.7 121 89 121 L 49 121 z M 104 121 A 3 3 0 0 0 101 124 A 3 3 0 0 0 104 127 A 3 3 0 0 0 107 124 A 3 3 0 0 0 104 121 z"
-            ></path>
+              d="M 79.335938 15.667969 C 78.064453 15.622266 76.775 15.762109 75.5 16.099609 C 72.1 16.999609 69.299609 19.199219 67.599609 22.199219 L 64 28.699219 C 63.2 30.099219 63.699609 32.000781 65.099609 32.800781 L 82.400391 42.800781 C 82.900391 43.100781 83.400391 43.199219 83.900391 43.199219 C 84.200391 43.199219 84.399219 43.199609 84.699219 43.099609 C 85.499219 42.899609 86.1 42.399219 86.5 41.699219 L 90.199219 35.199219 C 91.899219 32.199219 92.4 28.700781 91.5 25.300781 C 90.6 21.900781 88.400391 19.100391 85.400391 17.400391 C 83.525391 16.337891 81.455078 15.744141 79.335938 15.667969 z M 60.097656 38.126953 C 59.128906 38.201172 58.199219 38.724609 57.699219 39.599609 L 27.5 92 C 24.1 97.8 22.200781 104.30039 21.800781 110.90039 L 21 123.80078 C 20.9 124.90078 21.5 125.99961 22.5 126.59961 C 23 126.89961 23.5 127 24 127 C 24.6 127 25.199219 126.8 25.699219 126.5 L 36.5 119.40039 C 42 115.70039 46.7 110.8 50 105 L 80.300781 52.599609 C 81.100781 51.199609 80.599219 49.3 79.199219 48.5 C 77.799219 47.7 75.899609 48.199609 75.099609 49.599609 L 44.800781 102 C 41.900781 106.9 37.899609 111.20039 33.099609 114.40039 L 27.300781 118.19922 L 27.699219 111.30078 C 27.999219 105.60078 29.699609 100 32.599609 95 L 62.900391 42.599609 C 63.700391 41.199609 63.200781 39.3 61.800781 38.5 C 61.275781 38.2 60.678906 38.082422 60.097656 38.126953 z M 49 121 C 47.3 121 46 122.3 46 124 C 46 125.7 47.3 127 49 127 L 89 127 C 90.7 127 92 125.7 92 124 C 92 122.3 90.7 121 89 121 L 49 121 z M 104 121 A 3 3 0 0 0 101 124 A 3 3 0 0 0 104 127 A 3 3 0 0 0 107 124 A 3 3 0 0 0 104 121 z">
+            </path>
           </svg>
         </button>
       </div>
@@ -67,26 +42,19 @@
       <span class="text-taupe-gray">{{ profile.address }}</span>
       <div class="flex">
         <div>
-          <p
-            *ngIf="
+          <p *ngIf="
               now > this.profile.duration[0] && now < this.profile.duration[1];
               else close_time
-            "
-          >
+            ">
             <span class="text-tahiti">Open</span><i class="mx-1"> &#9679; </i>
-            <span class="text-taupe-gray"
-              >Till {{ profile.duration[1] }}:00</span
-            >
+            <span class="text-taupe-gray">Till {{ profile.duration[1] }}:00</span>
           </p>
           <ng-template #close_time>
             <p>
-              <span class="text-flicker-pink">Closed</span
-              ><i class="mx-1"> &#9679; </i>
-              <span class="text-taupe-gray"
-                >Open at {{ profile.duration[0] }}:00</span
-              >
-            </p></ng-template
-          >
+              <span class="text-flicker-pink">Closed</span><i class="mx-1"> &#9679; </i>
+              <span class="text-taupe-gray">Open at {{ profile.duration[0] }}:00</span>
+            </p>
+          </ng-template>
         </div>
         <div class="mx-5">
           <p *ngIf="!profile.status">
@@ -95,80 +63,41 @@
         </div>
       </div>
     </div>
-    <div
-      class="flex bg-flicker-pink h-14 rounded-lg items-center text-white px-3"
-    >
+    <div (click)="reviewRedirect()" class="flex bg-flicker-pink cursor-pointer h-14 rounded-lg items-center text-white px-3">
       <span class="text-lg mr-3">Reviews</span>
       <div class="flex items-center border-l-2 border-white h-full pl-3">
-        <svg
-          width="15"
-          height="15"
-          viewBox="0 0 12 12"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
+        <svg width="15" height="15" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M11.6121 4.22554L8.01478 3.67806L6.40666 0.264102C6.36274 0.170629 6.29048 0.0949614 6.20122 0.0489671C5.97736 -0.0667604 5.70532 0.0296792 5.59339 0.264102L3.98528 3.67806L0.38791 4.22554C0.288731 4.24038 0.198053 4.28934 0.128627 4.36352C0.0446959 4.45386 -0.00155415 4.5754 3.98784e-05 4.70142C0.0016339 4.82745 0.0509416 4.94766 0.137128 5.03563L2.73987 7.69291L2.12496 11.4452C2.11054 11.5324 2.11976 11.6222 2.15159 11.7043C2.18341 11.7864 2.23655 11.8575 2.305 11.9095C2.37344 11.9616 2.45444 11.9925 2.53882 11.9988C2.6232 12.0051 2.70757 11.9865 2.78238 11.9452L6.00003 10.1736L9.21768 11.9452C9.30553 11.9941 9.40754 12.0104 9.5053 11.9926C9.75183 11.9481 9.9176 11.7033 9.8751 11.4452L9.26019 7.69291L11.8629 5.03563C11.9338 4.96293 11.9805 4.86798 11.9947 4.76412C12.033 4.50447 11.8601 4.26412 11.6121 4.22554Z"
-            fill="#F8DD12"
-          />
+            fill="#F8DD12" />
         </svg>
         <div class="mx-2 text-center font-normal">
           <span>Delivery</span>
           <hr class="my-1" />
           {{ profile.Reviews }}
         </div>
-        <svg
-          width="18"
-          height="18"
-          viewBox="0 0 10 10"
-          fill="none"
-          (click)="reviewRedirect()"
-          xmlns="http://www.w3.org/2000/svg"
-        >
+        <svg width="18" height="18" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M9 0H3C2.4485 0 2 0.4485 2 1V7C2 7.5515 2.4485 8 3 8H9C9.5515 8 10 7.5515 10 7V1C10 0.4485 9.5515 0 9 0ZM3 7V1H9L9.001 7H3Z"
-            fill="black"
-          />
-          <path
-            d="M1 3H0V9C0 9.5515 0.4485 10 1 10H7V9H1V3ZM6.5 2H5.5V3.5H4V4.5H5.5V6H6.5V4.5H8V3.5H6.5V2Z"
-            fill="black"
-          />
+            fill="black" />
+          <path d="M1 3H0V9C0 9.5515 0.4485 10 1 10H7V9H1V3ZM6.5 2H5.5V3.5H4V4.5H5.5V6H6.5V4.5H8V3.5H6.5V2Z"
+            fill="black" />
         </svg>
       </div>
     </div>
   </div>
   <div class="w-4/5 flex justify-between flex-col">
     <div class="flex text-xl my-2 text-taupe-gray">
-      <a
-        [ngClass]="{ 'text-flicker-pink': router.url === '/:id/order' }"
-        routerLink="/admin/dashboard/order"
-        class="mx-14 font-regular"
-        >Order</a
-      >
-      <a
-        [ngClass]="{ 'text-flicker-pink': router.url === '/:id/review' }"
-        routerLink="/admin/dashboard/review"
-        class="mx-14 font-regular"
-        >Reviews</a
-      >
-      <a
-        [ngClass]="{ 'text-flicker-pink': router.url === '/:id/add' }"
-        routerLink="/admin/dashboard/add"
-        class="mx-14 font-regular flex items-center"
-        >Add New
-        <svg
-          class="ml-1"
-          width="20"
-          height="20"
-          viewBox="0 0 16 16"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
+      <a [ngClass]="{ 'text-flicker-pink': router.url === '/:id/order' }" routerLink="/admin/dashboard/order"
+        class="mx-14 font-regular">Order</a>
+      <a [ngClass]="{ 'text-flicker-pink': router.url === '/:id/review' }" routerLink="/admin/dashboard/review"
+        class="mx-14 font-regular">Reviews</a>
+      <a [ngClass]="{ 'text-flicker-pink': router.url === '/:id/add' }" routerLink="/admin/dashboard/add"
+        class="mx-14 font-regular flex items-center">Add New
+        <svg class="ml-1" width="20" height="20" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M4 8C4 7.86739 4.05268 7.74021 4.14645 7.64645C4.24021 7.55268 4.36739 7.5 4.5 7.5H7.5V4.5C7.5 4.36739 7.55268 4.24021 7.64645 4.14645C7.74021 4.05268 7.86739 4 8 4C8.13261 4 8.25979 4.05268 8.35355 4.14645C8.44732 4.24021 8.5 4.36739 8.5 4.5V7.5H11.5C11.6326 7.5 11.7598 7.55268 11.8536 7.64645C11.9473 7.74021 12 7.86739 12 8C12 8.13261 11.9473 8.25979 11.8536 8.35355C11.7598 8.44732 11.6326 8.5 11.5 8.5H8.5V11.5C8.5 11.6326 8.44732 11.7598 8.35355 11.8536C8.25979 11.9473 8.13261 12 8 12C7.86739 12 7.74021 11.9473 7.64645 11.8536C7.55268 11.7598 7.5 11.6326 7.5 11.5V8.5H4.5C4.36739 8.5 4.24021 8.44732 4.14645 8.35355C4.05268 8.25979 4 8.13261 4 8ZM8 16C10.1217 16 12.1566 15.1571 13.6569 13.6569C15.1571 12.1566 16 10.1217 16 8C16 5.87827 15.1571 3.84344 13.6569 2.34315C12.1566 0.842855 10.1217 0 8 0C5.87827 0 3.84344 0.842855 2.34315 2.34315C0.842855 3.84344 0 5.87827 0 8C0 10.1217 0.842855 12.1566 2.34315 13.6569C3.84344 15.1571 5.87827 16 8 16ZM8 15C7.08075 15 6.1705 14.8189 5.32122 14.4672C4.47194 14.1154 3.70026 13.5998 3.05025 12.9497C2.40024 12.2997 1.88463 11.5281 1.53284 10.6788C1.18106 9.8295 1 8.91925 1 8C1 7.08075 1.18106 6.1705 1.53284 5.32122C1.88463 4.47194 2.40024 3.70026 3.05025 3.05025C3.70026 2.40024 4.47194 1.88463 5.32122 1.53284C6.1705 1.18106 7.08075 1 8 1C9.85652 1 11.637 1.7375 12.9497 3.05025C14.2625 4.36301 15 6.14348 15 8C15 9.85652 14.2625 11.637 12.9497 12.9497C11.637 14.2625 9.85652 15 8 15Z"
-            [ngClass]="{ 'fill-flicker-pink': router.url === '/:id/add' }"
-            fill="#888282"
-          />
+            [ngClass]="{ 'fill-flicker-pink': router.url === '/:id/add' }" fill="#888282" />
         </svg>
       </a>
     </div>
