--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,62 +1,35 @@
 <nav>
-  <div
-    [ngClass]="{
-      absolute: router.url === '/',
+  <div [ngClass]="{ 
+    'bg-black opacity-90 fixed': isScrolled && router.url !== '/restaurant',
+    'bg-transparent absolute': !isScrolled && router.url === '/',
       hidden:
         router.url === '/auth/login' ||
         router.url === '/auth/signup' ||
         router.url === '/admin/login' ||
         router.url === '/admin/signup'
-    }"
-    class="inset-x-0 md:container md:mx-auto flex justify-between text-yellow-pantone text-xl"
-  >
+    }" class="inset-x-0 md:container md:mx-auto flex justify-between text-yellow-pantone text-xl">
     <div class="flex m-5 items-center">
-      <img
-        src="../assets/images//juicy-n-yummy.png"
-        alt="juicy-n-yummy"
-        width="40px"
-        height="40px"
-        class="rounded-full"
-      />
+      <img src="../assets/images//juicy-n-yummy.png" alt="juicy-n-yummy" width="40px" height="40px"
+        class="rounded-full" />
       <a routerLink="/" class="mx-5">Juicy N' Yummy</a>
-      <div
-        class="flex items-center text-black bg-white/[.5] h-full rounded-full"
-      >
+      <div class="flex items-center text-black bg-white/[.5] h-full rounded-full">
         <label for="search_bar">
-          <img
-            src="../assets/images/search.svg"
-            width="20px"
-            alt="search"
-            class="mx-3"
-        /></label>
-        <input
-          class="outline-none w-80 bg-transparent text-flicker-pink placeholder:text-taupe-gray"
-          id="search_bar"
-          type="text"
-          placeholder="www.juicynyummy.com"
-        />
+          <img src="../assets/images/search.svg" width="20px" alt="search" class="mx-3" /></label>
+        <input [ngClass]="{ 
+          'text-flicker-pink placeholder:text-taupe-gray': !isScrolled,
+          'text-black placeholder:white': isScrolled
+          }" class="outline-none w-80 bg-transparent" id="search_bar" type="text" placeholder="www.juicynyummy.com" />
       </div>
     </div>
     <div class="flex m-5 items-center">
-      <button
-        *ngIf="userAuth || adminAuth"
-        (click)="logout()"
-        mat-button
-        class="mx-6"
-      >
+      <button *ngIf="userAuth || adminAuth" (click)="logout()" mat-button class="mx-6">
         Log out
       </button>
-      <button
-        *ngIf="userAuth"
-        mat-button
-        (click)="edit()"
-        class="bg-yellow-pantone text-flicker-pink rounded-lg flex p-1 mx-3"
-      >
-        <img
-          class="rounded-full w-6 h-6 mr-3"
+      <button *ngIf="userAuth" mat-button (click)="edit()"
+        class="bg-yellow-pantone text-flicker-pink rounded-lg flex p-1 mx-3">
+        <img class="rounded-full w-6 h-6 mr-3"
           src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaUTp3j_LpF5r5_gNdvW0g7p057ExdcHWbUQ&usqp=CAU"
-          alt=""
-        />
+          alt="" />
         Profile
       </button>
     </div>
