--- a/src/app/user/restaurant/restaurant.component.html
+++ b/src/app/user/restaurant/restaurant.component.html
@@ -1,38 +1,44 @@
 <div class="md:container md:m-auto">
-  <div *ngIf="origin_value" class="m-10 mx-40">
+  <div class="m-10 mx-40">
     <h1 class="text-taupe-gray">Regional Food</h1>
     <div class="flex flex justify-evenly">
       <div *ngFor="let i of origin" class="flex flex-col justify-center items-center">
-        <img class="m-4 border-2 border-black h-40 w-40 rounded-full cursor-pointer" src="{{ i.image }}"
-          alt="{{ i.origin }}" (click)="getOrigin(i.origin)" />
+        <img [ngClass]="{
+          'border-black':i.origin!==lastFilter,
+          'border-[#ff0000]':i.origin===lastFilter
+      }" class="border-4 m-4 h-40 w-40 rounded-full cursor-pointer" src="{{ i.image }}" alt="{{ i.origin }}"
+          (click)="getOrigin(i.origin)" />
         <p class="text-xl text-flicker-pink font-medium">{{ i.origin }}</p>
       </div>
     </div>
   </div>
-  <div *ngIf="category_value" class="m-10 mx-40">
+  <div class="m-10 mx-40">
     <h1 class="text-taupe-gray">Suggestions for you</h1>
     <div class="flex flex justify-evenly">
       <div *ngFor="let i of category" class="flex flex-col justify-center items-center">
-        <img class="m-4 border-2 border-black h-36 w-36 rounded-full cursor-pointer" src="{{ i.image }}"
-          alt="{{ i.origin }}" (click)="getCategory(i.origin)" />
+        <img [ngClass]="{
+          'border-black':i.origin!==lastFilter,
+          'border-[#ff0000]':i.origin===lastFilter
+      }" class="border-4 m-4 h-40 w-40 rounded-full cursor-pointer" src="{{ i.image }}" alt="{{ i.origin }}"
+          (click)="getCategory(i.origin)" />
       </div>
     </div>
   </div>
   <div class="m-10 mx-40">
     <h1 class="text-taupe-gray">Restaurants near you</h1>
     <div *ngIf="item" class="grid grid-cols-3 gap-10 p-10">
-      <div *ngFor="let i of item" class="flex h-52 border-2 border-black">
-        <div class="flex relative">
-          <img *ngIf="i.imgBase64" class="w-full cursor-pointer mr-10" [src]="'data:image/jpeg;base64,' + i.imgBase64"
-            alt="Product Image" />
+      <a routerLink="/{{ i.restaurantId }}/" *ngFor="let i of item" class="flex h-52 border-2 border-black">
+        <div class="flex relative w-full">
+          <img *ngIf="i.imgBase64" class="w-full h-full cursor-pointer object-cover"
+            [src]="'data:image/jpeg;base64,' + i.imgBase64" alt="Product Image" />
           <div class="gradient_black absolute h-full w-full"></div>
         </div>
-        <div class="flex flex-col justify-between bg-black w-32 text-white h-full text-right p-3">
+        <div class="flex flex-col w-3/5 flex-end justify-between bg-black w-32 text-white h-full text-right p-3">
           <div class="relative h-16">
-            <a routerLink="/{{ i.restaurantId }}/" class="text-3xl leading-5">
+            <div class="text-2xl font-bold leading-5">
               {{ i.restaurant }} <br />
               <span class="text-xs text-taupe-gray">Pizza , Fast food</span>
-            </a>
+            </div>
             <svg class="absolute bottom-0 right-0" width="15" height="15" viewBox="0 0 12 12" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path
@@ -53,7 +59,6 @@
             </div>
           </div>
         </div>
-      </div>
+      </a>
     </div>
   </div>
-</div>
