--- a/src/app/user/restaurant/restaurant.component.html
+++ b/src/app/user/restaurant/restaurant.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
   </div>
-  <div class="m-10 mx-40">
+  <!-- <div class="m-10 mx-40">
     <h1 class="text-taupe-gray">Suggestions for you</h1>
     <div class="flex flex justify-evenly">
       <div *ngFor="let i of category" class="flex flex-col justify-center items-center">
@@ -23,17 +23,17 @@
           (click)="getCategory(i.origin)" />
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="m-10 mx-40">
     <h1 class="text-taupe-gray">Restaurants near you</h1>
     <div *ngIf="item" class="grid grid-cols-3 gap-10 p-10">
       <a routerLink="/{{ i.restaurantId }}/" *ngFor="let i of item" class="flex h-52 border-2 border-black">
-        <div class="flex relative w-full">
+        <div class="flex relative w-3/5">
           <img *ngIf="i.imgBase64" class="w-full h-full cursor-pointer object-cover"
             [src]="'data:image/jpeg;base64,' + i.imgBase64" alt="Product Image" />
           <div class="gradient_black absolute h-full w-full"></div>
         </div>
-        <div class="flex flex-col w-3/5 flex-end justify-between bg-black w-32 text-white h-full text-right p-3">
+        <div class="flex flex-col w-2/5 flex-end justify-between bg-black text-white h-full text-right p-3">
           <div class="relative h-16">
             <div class="text-2xl font-bold leading-5">
               {{ i.restaurant }} <br />
@@ -61,4 +61,5 @@
         </div>
       </a>
     </div>
+    <div #loadMoreTrigger></div>
   </div>
