--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,12 +9,12 @@
         router.url === '/admin/signup'
     }" class="inset-x-0 md:container md:mx-auto flex justify-between text-yellow-pantone text-xl">
     <div class="flex m-5 items-center">
-      <img src="../assets/images//juicy-n-yummy.png" alt="juicy-n-yummy" width="40px" height="40px"
+      <img src="assets/images/juicy-n-yummy.png" alt="juicy-n-yummy" width="40px" height="40px"
         class="rounded-full" />
       <a routerLink="/" class="mx-5">Juicy N' Yummy</a>
       <div class="flex items-center bg-[#f9f858]/[.5] h-full rounded-full">
         <label for="search_bar">
-          <img src="../assets/images/search.svg" width="20px" alt="search" class="mx-3" /></label>
+          <img src="assets/images/search.svg" width="20px" alt="search" class="mx-3" /></label>
         <input [ngClass]="{ 
           'placeholder:text-black/[.5]': !isScrolled,
           'placeholder:text-slate-300': isScrolled
