--- a/src/app/user/home/home.component.css
+++ b/src/app/user/home/home.component.css
@@ -1,4 +1,4 @@
 .bg {
-  background-image: url(../../../assets/images/bg.jpg);
+  background-image: url(/Juicy-N-Yummy/assets/images/bg.jpg);
   height: 60vh;
 }
