--- a/src/app/admin/adminlogin/adminlogin.component.css
+++ b/src/app/admin/adminlogin/adminlogin.component.css
@@ -1,5 +1,5 @@
 .adminlogin {
-    background-image: url(/Juicy-N-Yummy/assets/images/auth.jpg);
+    background-image: url(../../../assets/images/auth.jpg);
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
